[package]
name = "direct-share"
description = "Share any files easily from your machine"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = [
    "storycraft <storycraft@pancake.sh>"
]

[dependencies]
log = "0.4.14"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "1.16.1", features = [ "full" ] }
tokio-util = "0.6.9"

hyper = { version = "0.14.16", features = [ "full" ] }
toml = "0.5.8"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
public-ip = "0.2"