[package]
name = "direct-share"
description = "Share any files easily from your machine"
version = "0.4.1"
edition = "2021"
license = "MIT"
authors = ["storycraft <storycraft@pancake.sh>"]
repository = "https://github.com/storycraft/direct-share"

[dependencies]
log = "0.4.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
toml = "0.8.12"
pretty_env_logger = "0.5.0"
rand = "0.8.4"
thiserror = "1.0.58"
anyhow = "1.0"
tokio-util = "0.7.10"
futures-util = "0.3.30"
tokio-tar = "0.3.1"
async-stream = "0.3.5"
igd = { version = "0.12.1", features = ["aio"] }
local-ip-address = "0.6.1"
