[package]
name = "direct-share"
description = "Share any files easily from your machine"
version = "0.4.2"
edition = "2021"
license = "MIT"
authors = ["storycraft <storycraft@pancake.sh>"]
repository = "https://github.com/storycraft/direct-share"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
toml = "0.8"
pretty_env_logger = "0.5"
rand = "0.8"
thiserror = "1"
anyhow = "1"
tokio-util = "0.7"
futures-util = "0.3"
tokio-tar = "0.3.1"
igd = { version = "0.12", features = ["aio"] }
local-ip-address = "0.6"
never-say-never = "6.6.666"
